# pykeepass

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
pykeepass/: __init__.py  pykeepass.py
pykeepass/kdbx_parsing/: __init__.py  builder.py
tests/: tests.py
