[project]
name = "pykeepass"
version = "4.2.3"
readme = "README.md"
description = "Python library to interact with keepass databases (supports KDBX3 and KDBX4)"
authors = [
    { name = "Philipp Schmitt", email = "philipp@schmitt.co" },
    { name = "Evan Widloski", email = "evan_gh@widloski.com" },
    { name = "Corey Leavitt", email = "corey@leavitt.info" }
]
license = { text = "GPL-3.0" }
keywords = ["vault", "keepass", "kdbx", "password-manager"]
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=23.1.0",
    "construct>=2.10.70",
    "lxml>=6.0.2",
    "pycryptodomex>=3.23.0",
    "pyotp>=2.9.0",
]
classifiers = [
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pdoc>=15.0.4",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/libkeepass/pykeepass"
Repository = "https://github.com/libkeepass/pykeepass"
Issues = "https://github.com/libkeepass/pykeepass/issues"
Changelog = "https://github.com/libkeepass/pykeepass/blob/master/CHANGELOG.rst"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pykeepass"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py"]
